fix channel icons on safari

--- a/packages/rocketchat-theme/client/imports/components/sidebar/sidebar-item.css
+++ b/packages/rocketchat-theme/client/imports/components/sidebar/sidebar-item.css
@@ -128,8 +128,9 @@
 	}
 
 	&__room-type {
-
+		display: flex;
 		color: currentColor;
+
 		font-size: 0.6rem;
 	}
 
